fixing# Please enter the commit message for your changes. Lines starting# with '#' will be ignored, and an empty message aborts the commit.# On branch wip_kasprzak# Your branch is up-to-date with 'origin/wip_kasprzak'.## Changes to be committed:#	deleted:    CMakeLists.txt#	deleted:    Client.hpp#	deleted:    ConnectionType.hpp#	deleted:    DataReaders/DataFromClientReader.hpp#	deleted:    DataReaders/DataFromServerReader.hpp#	deleted:    DataReaders/SSLDataFromClientReader.hpp#	deleted:    DataWriters/DataToClientWriter.hpp#	deleted:    DataWriters/DataToServerWriter.hpp#	deleted:    DataWriters/SSLDataToClientWriter.hpp#	deleted:    HostConnector.cpp#	deleted:    HostConnector.hpp#	deleted:    HttpRequestParserDummy.hpp#	deleted:    IPAndPortExtractor.hpp#	deleted:    LogSystem/ConsoleLog.hpp#	deleted:    LogSystem/LogSystem.cpp#	deleted:    LogSystem/LogSystem.hpp#	deleted:    LogSystem/Logging.hpp#	deleted:    LogSystem/SilentLog.hpp#	deleted:    RequestURIParser.hpp#	deleted:    SSLInitializer.hpp#	deleted:    Server.hpp#	renamed:    ArgumentParser/ArgumentParser.hpp -> Server/ArgumentParser/ArgumentParser.hpp#	modified:   Server/CMakeLists.txt#	modified:   Server/Client.hpp#	modified:   Server/DataReaders/DataFromClientReader.hpp#	modified:   Server/DataReaders/DataFromServerReader.hpp#	modified:   Server/DataReaders/SSLDataFromClientReader.hpp#	modified:   Server/DataWriters/DataToClientWriter.hpp#	modified:   Server/DataWriters/DataToServerWriter.hpp#	modified:   Server/DataWriters/SSLDataToClientWriter.hpp#	renamed:    LICENSE -> Server/LICENSE#	renamed:    Makefile -> Server/Makefile#	renamed:    README.md -> Server/README.md#	modified:   Server/Server.hpp#	modified:   Server/ServerMain.cpp#	deleted:    ServerInitializer.hpp#	deleted:    ServerMain.cpp#	deleted:    ServerOwner.cpp#	deleted:    ServerOwner.hpp#	deleted:    ServerSettings.hpp#	deleted:    ca.crt#	deleted:    ca.key#	deleted:    ca.srl#	delet

--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -14,11 +14,14 @@ file(GLOB Server_src
     "DataWriters/*.hpp"
     "DataWriters/*.cpp"
     "LogSystem/*.hpp"
-    "LogSystem/*.cpp")
+    "LogSystem/*.cpp"
+    "ArgumentParser/*.hpp")
 
 add_executable(Server
 	${Server_src}
 )
 
 find_package(OpenSSL REQUIRED)
-target_link_libraries(Server OpenSSL::SSL)
+FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+target_link_libraries(Server OpenSSL::SSL ${Boost_LIBRARIES})
